--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://Amirtha12S.github.io/Amirthavarshiniportfolio",
+  "homepage": "https://github.com/Amirtha12S/VarshiniPortfolio.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
